--- a/index.html
+++ b/index.html
@@ -335,8 +335,8 @@ input {
     </div>
   </div>
 
-  <button id="prev-button">Previous</button>
-  <button id="next-button">Next</button>
+  <button style="background-color: black;  color: darkgoldenrod;"id="prev-button">Previous</button>
+  <button style="background-color: black;  color: darkgoldenrod;" id="next-button">Next</button>
 
   <script>
       const videoUrls = [
