--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 .footer{
     background-color: black;
     margin-top: auto;
-    position: sticky;
+    position: relative;
     bottom: -890px;
     padding: 20px;
     display: block; 
