--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="author" content="Tyler Gore">
     <meta name="viewport" content="width=device-width, initial-scale=0.30">
     <meta http-equiv="refresh" content="300">
-          
+
+    <link rel="icon" href="" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@500&family=Rye&display=swap" rel="stylesheet">
