--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <p class="w3-text-black">
                     Slow-cooked perfection, our tender, smoky brisket satisfies. $200</p><br>
                 
-                    <h4>burnt ends</h4>
+                    <h4>Burnt Ends</h4>
                 <p class="w3-text-black">Irresistible cubes of smoky brisket, our burnt ends are a flavor explosion. $100</p><br>
 
                 <h4>BBQ Sauce</h4>
