--- a/index.html
+++ b/index.html
@@ -94,6 +94,11 @@
 
                 <h4>Potato Salad</h4>
                 <p class="w3-text-black">Savor the harmony of flavors in our classic homemade potato salad $100</p>
+            
+                 <h4>Banana Pudding</h4>
+                 <p class="w3-text-black">Delight in our heavenly banana pudding, layers of creamy vanilla custard, ripe bananas, and luscious whipped cream, creating a 
+                     nostalgic and irresistible dessert that will transport you to sweet bliss with every spoonful.</p>
+            
             </div>
 
             <div class="w3-col l6 w3-padding-large">
