--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             </div>
 
             <div class="w3-col l6 w3-padding-large">
-                <img src="C:\Users\tyler\Downloads\menuimg.jpg" class="w3-round w3-image w3-opacity-min" alt="Menu" style="width:100%">
+                <img src="https://raw.githubusercontent.com/TGore714/RNSSSBBQ/main/menuimg.jpg" class="w3-round w3-image w3-opacity-min" alt="Menu" style="width:100%">
             </div>
         </div>
 
