--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
     
     <!--logo and social media-->
     <img class="logo" src="C:\Users\tyler\OneDrive\Documents\images.html\transparent-logo (2).png" alt="logo">
-    <a href="https://www.facebook.com/RNsssBBQ"><img class="media" src="C:\Users\tyler\OneDrive\Pictures\Saved Pictures\Facebook-Transparent.png" alt="facebook"></a>
-    <a href="https://www.instagram.com/rnsmokinsweetsavourbbq/"><img class="media" src="C:\Users\tyler\OneDrive\Pictures\Saved Pictures\instagram.png" alt="instagram"></a>
-    <a href="https://twitter.com/RNSSSBBQ"><img class="media" src="C:\Users\tyler\OneDrive\Pictures\Saved Pictures\twitterlogo.png" alt="twitter"></a>
-    <a href="https://www.youtube.com/@rnsmokinsweetsavourbbq"><img class="media" src="C:\Users\tyler\OneDrive\Pictures\Saved Pictures\youtubelogo.png" alt="youtube"></a>
+    <a href="https://www.facebook.com/RNsssBBQ"><img class="media" src="https://raw.githubusercontent.com/TGore714/RNSSSBBQ/main/Facebook-Transparent.png" alt="facebook"></a>
+    <a href="https://www.instagram.com/rnsmokinsweetsavourbbq/"><img class="media" src="https://raw.githubusercontent.com/TGore714/RNSSSBBQ/main/instagram.png" alt="instagram"></a>
+    <a href="https://twitter.com/RNSSSBBQ"><img class="media" src="https://raw.githubusercontent.com/TGore714/RNSSSBBQ/main/twitterlogo.png" alt="twitter"></a>
+    <a href="https://www.youtube.com/@rnsmokinsweetsavourbbq"><img class="media" src="https://raw.githubusercontent.com/TGore714/RNSSSBBQ/main/youtubelogo.png" alt="youtube"></a>
     
     <!-- Page content -->
     <div class="w3-content" style="max-width:1100px">
