--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </header>
     
     <!--logo and social media-->
-    <img class="logo" src="C:\Users\tyler\OneDrive\Documents\images.html\transparent-logo (2).png" alt="logo">
+    <img class="logo" src="https://raw.githubusercontent.com/TGore714/RNSSSBBQ/main/transparent-logo%20(2).png" alt="logo">
     <a href="https://www.facebook.com/RNsssBBQ"><img class="media" src="https://raw.githubusercontent.com/TGore714/RNSSSBBQ/main/Facebook-Transparent.png" alt="facebook"></a>
     <a href="https://www.instagram.com/rnsmokinsweetsavourbbq/"><img class="media" src="https://raw.githubusercontent.com/TGore714/RNSSSBBQ/main/instagram.png" alt="instagram"></a>
     <a href="https://twitter.com/RNSSSBBQ"><img class="media" src="https://raw.githubusercontent.com/TGore714/RNSSSBBQ/main/twitterlogo.png" alt="twitter"></a>
