--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
     <!-- Header -->
     <header class="w3-display-container w3-content w3-wide" style="max-width:1600px;min-width:500px" id="home">
-        <img class="w3-image smaller" src="https://raw.githubusercontent.com/TGore714/RNSSSBBQ/main/homebrisket.jpg" alt="bisket" width="1600" height="600">
+        <img class="w3-image smaller" src="https://raw.githubusercontent.com/TGore714/RNSSSBBQ/main/homebrisket.jpg" alt="bisket">
         <div class="w3-display-bottomleft w3-padding-large w3-opacity">
         <h2 class="w3-xxlarge">R&N</h2>
         </div>
