--- a/index.html
+++ b/index.html
@@ -62,8 +62,10 @@
         }
     
         .smaller {
-            width: 1000px;
-        }
+        width: 100%;
+        max-width: 600px; /* Adjust the value as needed */
+       }
+
     
         .logo {
             width: 300px;
