--- a/index.html
+++ b/index.html
@@ -62,9 +62,12 @@
         }
     
         .smaller {
-        width: 100%;
-        max-width: 600px; /* Adjust the value as needed */
-       }
+            width: 100%;
+            max-width: 600px; /* Adjust the value as needed */
+            margin-left: auto;
+            margin-right: auto;
+         }
+ 
 
     
         .logo {
