--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             body {
                 font-family: "Times New Roman", Georgia, Serif;
                 background-color: grey;
+                width: 100%;
             }
 
             h1,
