--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         
         .smaller {
             width: 100%;
-            max-width: 600px; /* Adjust the value as needed */
+           /* max-width: 600px; */ 
             margin-left: auto;
             margin-right: auto;
          }
@@ -90,7 +90,6 @@
 <body>
 
     <!-- Navbar (sit on top) -->
-    <!-- Navbar (sit on top) -->
 <div class="w3-top">
     <div class="w3-bar w3-grey w3-padding w3-card" style="letter-spacing:4px;">
         <a href="#home" class="w3-bar-item w3-button">R&N BBQ</a>
@@ -114,7 +113,7 @@
 
 
     <!-- Header -->
-    <header class="w3-display-container w3-content w3-wide" style="max-width:1600px;min-width:500px" id="home">
+    <header class="w3-display-container w3-wide w3-content smaller" style="max-width:1600px;min-width:500px" id="home">
         <img class="smaller" src="https://raw.githubusercontent.com/TGore714/RNSSSBBQ/main/homebrisket.jpg" alt="bisket">
         <div class="w3-display-bottomleft w3-padding-large w3-opacity">
         <h2 class="w3-xxlarge">R&N</h2>
