--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
 
 
     <!-- Header -->
-    <header class="w3-display-container w3-wide w3-content smaller" style="max-width:1600px;min-width:500px" id="home">
-        <img class="smaller" src="https://raw.githubusercontent.com/TGore714/RNSSSBBQ/main/homebrisket.jpg" alt="bisket">
+    <header class="smaller" style="max-width:1600px;min-width:500px" id="home">
+        <img class="w3-image" src="https://raw.githubusercontent.com/TGore714/RNSSSBBQ/main/homebrisket.jpg" alt="bisket">
         <div class="w3-display-bottomleft w3-padding-large w3-opacity">
         <h2 class="w3-xxlarge">R&N</h2>
         </div>
