--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
         background-color: lightgrey; /* Change background color on hover */
     }
 
+   .smaller {
+       width: 100%;
+   }
+            
     /* Adjust the positioning for small screens */
     @media only screen and (max-width: 1200px) {
         .w3-right.w3-hide-small {
@@ -113,8 +117,8 @@
 
 
     <!-- Header -->
-    <header class="w3-display-container w3-wide w3-content smaller" style="max-width:1600px;min-width:500px" id="home">
-        <img class="w3-image" src="https://raw.githubusercontent.com/TGore714/RNSSSBBQ/main/homebrisket.jpg" alt="bisket">
+    <header class="w3-display-container w3-wide w3-content" style="max-width:1600px;min-width:500px" id="home">
+        <img class="w3-image smaller" src="https://raw.githubusercontent.com/TGore714/RNSSSBBQ/main/homebrisket.jpg" alt="bisket">
         <div class="w3-display-bottomleft w3-padding-large w3-opacity">
         <h2 class="w3-xxlarge">R&N</h2>
         </div>
