--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 
    .smaller {
        width: 100%;
+       height: 400px;
    }
             
     /* Adjust the positioning for small screens */
