--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
             }
         
          .logo {
-            width: 500px;
-            height: 500px;
+            width: 300px;
+            height: 300px;
+            display: flex;
             justify-content: center;
+            align-items: center;
          }
 
          .media {
@@ -32,6 +34,7 @@
             height: 150px;
             float: right;
             padding: 10px 10px 10px 10px; 
+            align
         }
 
     /* Custom styles for mobile dropdown menu */
