--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
         .logo {
             width: 300px;
             height: 300px;
+            display: flex;
             justify-content: center;
             align-items: center;
         }
@@ -113,7 +114,7 @@
 
     <!-- Header -->
     <header class="w3-display-container w3-wide w3-content" style="max-width:1600px;min-width:500px" id="home">
-        <img class="w3-image" src="https://raw.githubusercontent.com/TGore714/RNSSSBBQ/main/homebrisket.jpg" alt="bisket" width: 100%; height: 800px>
+        <img class="w3-image" src="https://raw.githubusercontent.com/TGore714/RNSSSBBQ/main/homebrisket.jpg" alt="bisket" width: 1600px; height: 800px>
         <div class="w3-display-bottomleft w3-padding-large w3-opacity">
         <h2 class="w3-xxlarge">R&N</h2>
         </div>
