--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
          .logo {
             width: 300px;
             height: 300px;
-            position: absolute;
-            right: 800px;
-         }
+            display: flex; 
+            justify-content: center;
+            align-items: center;
+            }
 
          .media {
             width: 150px;
