--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+        <link rel="icon" href="" type="image/x-icon">
+        
         <style>
             body {
                 font-family: "Times New Roman", Georgia, Serif;
