--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     }
 
     #mobileMenu a {
-        color: white; /* Change text color */
+        color: black; /* Change text color */
         padding: 12px 16px;
         display: block;
     }
