--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <title>R&N Smokin Sweet Savour BBQ</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+        <meta name="description" content="Welcome to R&N Smokin Sweet Savour BBQ! We are a small homestyle BBQ business offering mouth-watering slow-smoked BBQ dishes. Check out our menu, catering services, and contact us for delicious BBQ experience.">
+        <meta name="keywords" content="R&N BBQ, Smokin Sweet Savour BBQ, BBQ restaurant, barbecue, slow-smoked BBQ, catering services">
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         <link rel="icon" href="https://raw.githubusercontent.com/TGore714/RNSSSBBQ/main/transparent-logo%20(2).png" type="image/x-icon">
         
