--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
     <!-- Header -->
     <header class="w3-display-container w3-wide w3-content" style="max-width:1600px;min-width:500px" id="home">
-        <img style="height: 800px; width: 100%"; class="w3-image"; src="https://raw.githubusercontent.com/TGore714/RNSSSBBQ/main/homebrisket.jpg" alt="bisket">
+        <img style="height: 600px; width: 100%"; class="w3-image" src="https://raw.githubusercontent.com/TGore714/RNSSSBBQ/main/homebrisket.jpg" alt="bisket">
         <div class="w3-display-bottomleft w3-padding-large w3-opacity">
         <h2 class="w3-xxlarge">R&N</h2>
         </div>
