--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <style>
             body {
                 font-family: "Times New Roman", Georgia, Serif;
-                background-color: grey;
+                background-color: RGB(200, 200, 200);
             }
 
             h1,
