--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             .animate-bottom {
       opacity: 0;
       transform: translateY(40px);
-      transition: opacity 0.5s ease, transform 0.5s ease;
+      transition: opacity 1.5s ease, transform 0.5s ease;
     }
 
     .animate-bottom.visible {
@@ -58,7 +58,7 @@
         display: none;
         position: absolute;
         background-color: grey; /* Change background color */
-        min-width: 160px; /* Set the desired width */
+        width: 100%; /* Set the desired width */
         box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
         z-index: 1;
         right: 0; /* Position the menu from the right side */
