--- a/index.html
+++ b/index.html
@@ -136,14 +136,13 @@
     </header>
     
     <!-- Page content -->
-    <div class="w3-content" style="max-width:1100px">
+   <img src="https://raw.githubusercontent.com/TGore714/RNSSSBBQ/main/catering.jpg" class="w3-round w3-image w3-opacity-min" alt="Table Setting" width="600" height="750">
+        <div class="w3-content" style="max-width:1100px">
 
         <!-- About Section -->
         <div class="w3-row w3-padding-64" id="about">
             <div class="w3-col m6 w3-padding-large w3-hide-small">
-                <img src="https://raw.githubusercontent.com/TGore714/RNSSSBBQ/main/catering.jpg" class="w3-round w3-image w3-opacity-min" alt="Table Setting" width="600"
-                    height="750">
-            </div>
+                </div>
 
             <div class="w3-col m6 w3-padding-large">
                 <h1 class="w3-center">About R&N</h1><br>
