--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
             align
         }
 
+            .w3-content {
+  max-width: 1000px; /* Adjust the value to the desired width */
+  margin-left: auto;
+  margin-right: auto;
+}
+
     /* Custom styles for mobile dropdown menu */
     #mobileMenu {
         display: none;
