--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             body {
                 font-family: "Times New Roman", Georgia, Serif;
                 background-color: RGB(175, 175, 175);
+                overflow: hidden;
             }
 
             h1,
@@ -52,12 +53,6 @@
             padding: 10px 10px 10px 10px; 
             align
         }
-
-            .w3-content {
-  max-width: 1000px; /* Adjust the value to the desired width */
-  margin-left: auto;
-  margin-right: auto;
-}
 
     /* Custom styles for mobile dropdown menu */
     #mobileMenu {
