--- a/index.html
+++ b/index.html
@@ -46,10 +46,12 @@
 .hidden-element {
   opacity: 0;
   transition: opacity 0.5s ease-in-out;
+  visibility: hidden;
 }
 
 .visible {
   opacity: 1;
+  visibility: visible;
 }
             
     /* Custom styles for mobile dropdown menu */
