--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
     
         <!-- Header -->
-    <img style="height:  300px; width: 100%"; class="w3-image headerimg" src="https://raw.githubusercontent.com/TGore714/RNSSSBBQ/main/homebrisket.jpg" alt="bisket">
+    <img class="w3-image headerimg" src="https://raw.githubusercontent.com/TGore714/RNSSSBBQ/main/homebrisket.jpg" alt="bisket">
         <header class="w3-display-container w3-wide w3-content" style="max-width:1600px;min-width:500px" id="home">
         
         <div class="w3-display-bottomleft w3-padding-large w3-opacity">
