--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@
                 message here:</p>
             <form action="https://formsubmit.co/ryan@rnsssbbq.com" method="POST" target="_blank">
                 <p><input class="w3-input w3-padding-16" type="text" placeholder="Name" required name="Name"></p>
+               <p><input class="w3-input w3-padding-16" type="text" placeholder="email" required name="email"></p>
                 <p><input class="w3-input w3-padding-16" type="number" placeholder="How many people" required
                         name="People"></p>
                 <p><input class="w3-input w3-padding-16" type="datetime-local" placeholder="Date and time" required
