--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
     background-color: #fff;
     color: #333;
   }
+
+  .modal-button.white:hover {
+      background-color: light-grey;
+  }
             
          .logo {
             width: 400px;
