--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
                 <a href="#about" class="w3-bar-item w3-button">About</a>
                 <a href="#menu" class="w3-bar-item w3-button">Menu</a>
                 <a href="#contact" class="w3-bar-item w3-button">Contact</a>
+                <a href="https://www.facebook.com/RNsssBBQ/reviews" class="w3-bar-item w3-button">Reviews</a>
             </div>
         </div>
         <!-- Right-sided navbar links. Hide them on small screens -->
