--- a/index.html
+++ b/index.html
@@ -200,8 +200,9 @@
 
 <div class="overlay" id="popup">
   <div class="modal">
-    <p>Try out our new smoked wings!</p>
-    <img style="width: 100px; height: 100px;" src="https://scontent-dfw5-2.xx.fbcdn.net/v/t39.30808-6/371984544_258998320347869_4055601026669818083_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=5614bc&_nc_ohc=Qezf11BJWr0AX-3R3TR&_nc_ht=scontent-dfw5-2.xx&oh=00_AfAwff6uoxuyEKPFsnwmo5Z6c6IEFydfyy2i1I0p8IC7RQ&oe=65032050" alt="wings">
+    <h6>🦃🔥 Thanksgiving Pre-order Open! 🔥🦃</h6>
+      <p>Secure your exclusive smoked ham, BBQ, and mac and cheese feast now.
+          Limited slots available – pre-order for a flavor-packed Thanksgiving!</p>
       <button class="modal-button blue" onclick="doIt()">Let's do it!</button>
     <button class="modal-button white" onclick="closePopup()">Not right now</button>
   </div>
