--- a/index.html
+++ b/index.html
@@ -271,6 +271,9 @@
 
                 <h4>Smoked Baked Beans</h4>
                 <p class="w3-text-black">Delight in the rich and smoky goodness of our homemade smoked baked beans, a classic comfort food with a flavorful twist.<br><br><b>large: $30 Small: $6</b></p><br>
+
+                <h4>Smokin Spuds</h4>
+                <p>Stuffed with half a pound of smoked chicken or pork Smothered in cheese and drizzled in cream and R&N bbq sauce <br><br><b>large: $12 Each or $20 for 2</b></p><br>
                 
                 <h3>Ask Us About Specials, and Catering In the Contact Section</h3>
             
