--- a/index.html
+++ b/index.html
@@ -200,9 +200,8 @@
 
 <div class="overlay" id="popup">
   <div class="modal">
-    <h6>🦃🔥 Thanksgiving Pre-order Open! 🔥🦃</h6>
-      <p>Secure your exclusive smoked ham, BBQ, and mac and cheese feast now.
-          Limited slots available – pre-order for a flavor-packed Thanksgiving!</p>
+    <h6>🎄✨ Christmas Pre-order Now Available! ✨🎄</h6>
+      <p>Secure your exclusive holiday delights, including festive treats and the savory goodness of smoked BBQ. Limited slots – pre-order for a joyous and flavorful Christmas celebration!</p>
       <button class="modal-button blue" onclick="doIt()">Let's do it!</button>
     <button class="modal-button white" onclick="closePopup()">Not right now</button>
   </div>
