--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
             <div class="w3-col l6 w3-padding-large">
                 <h1 class="w3-center">Our Menu</h1><br>
                 <!-- Meats -->
-<h2>Meats</h2>
+<h1><b>Meats</b></h1>
 <h4>Smoked Brisket</h4>
 <p class="w3-text-black">
     Slow-cooked perfection, our tender, smoky brisket satisfies. <br> <br><b>$200 whole or $24 per lb</b>
@@ -275,7 +275,7 @@ expertly seasoned and slow-cooked to perfection, delivers a delightful balance o
 </p><br>
 
 <!-- Sides -->
-<h2>Sides</h2>
+<h1><b>Sides</b></h1>
 <h4>Smoked Mac and Cheese</h4>
 <p class="w3-text-black">Savor our homemade smoked mac and cheese, a creamy delight with a smoky twist. <br><br><b>large: $40 Small: $7</b>
 </p><br>
@@ -289,7 +289,7 @@ expertly seasoned and slow-cooked to perfection, delivers a delightful balance o
 </p><br>
 
 <!-- Desserts -->
-<h2>Desserts</h2>
+<h1><b>Desserts</b></h1>
 <h4>Banana Pudding</h4>
 <p class="w3-text-black">Delight in our luscious banana pudding, a heavenly dessert where layers of velvety custard,
 slices of ripe bananas, and delicate vanilla wafers meld together, creating a divine symphony of flavors and textures that will transport your taste buds to pure bliss. <br><br><b>large: $40 Small: $5</b>
