--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 </p><br>
 
 <h4>Brisket Burnt Ends</h4>
-<p class="w3-text-black">Irresistible cubes of smoky brisket, our burnt ends are a flavor explosion. <br><br> <b>$20 per lb</b>
+<p class="w3-text-black">Irresistible cubes of smoky brisket, our burnt ends are a flavor explosion. <br><br> <b>$24 per lb</b>
 </p><br>
 
 <h4>Pork Belly Burnt Ends</h4>
@@ -253,7 +253,7 @@
 
 <h4>Pulled Pork</h4>
 <p class="w3-text-black">Relish in the mouthwatering delight of our pulled pork, where succulent strands of
-slow-cooked pork, infused with a harmonious blend of smoky and savory flavors, effortlessly melt in your mouth, creating a truly satisfying and unforgettable culinary experience.<br><br> <b>$60 whole or $12 per lb</b>
+slow-cooked pork, infused with a harmonious blend of smoky and savory flavors, effortlessly melt in your mouth, creating a truly satisfying and unforgettable culinary experience.<br><br> <b>$12 per lb</b>
 </p><br>
 
 <h4>Whole Pork Shoulder</h4>
