--- a/index.html
+++ b/index.html
@@ -314,8 +314,8 @@ slices of ripe bananas, and delicate vanilla wafers meld together, creating a di
             <a href="https://twitter.com/RNSSSBBQ"><img class="media" src="https://raw.githubusercontent.com/TGore714/RNSSSBBQ/main/twitterlogo.png" alt="twitter"></a>
             <a href="https://www.youtube.com/@rnsmokinsweetsavourbbq"><img class="media" src="https://raw.githubusercontent.com/TGore714/RNSSSBBQ/main/youtubelogo.png" alt="youtube"></a>
 
-            <h3>We are located at 5050 Knob Rd, Azle Tx 76020.</h3>
-            <h3>hours of service: Wed-Sun 11 AM to 7 PM</h3>
+            <h4>We are located at 5050 Knob Rd, Azle Tx 76020.</h4>
+            <h4>Hours of Service: Wed-Sun 11 AM to 7 PM</h4>
                 
             <p>We offer full-service catering for any event, large or small. We understand your needs and we will cater
                 the food to satisfy the biggerst criteria of them all, both look and taste. Do not hesitate to contact
